--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <div class="wrapper">
 	<header>
-		<h1>VictoryRoom</h1>
+		<h1 class="logo">VictoryRoom</h1>
 	</header>
 </div><!-- wrapper -->
 
