home page 1st commit

--- a/index.html
+++ b/index.html
@@ -14,22 +14,49 @@
 	<link rel="shortcut icon" href="_/img/favicon.ico" />
 	<!-- CSS and Fonts-->
 	<link rel="stylesheet" href="_/css/style.css" />
-	<link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,700,700italic' rel='stylesheet' type='text/css' data-noprefix />
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500' rel='stylesheet' type='text/css' data-noprefix>
 	<!-- All JavaScript at the bottom, except this Modernizr build & CSS Browser Selector User Agent. -->
 	<script src="_/js/libs/css_browser_selector.min.js"></script>
 	<script src="_/js/libs/modernizr-2.8.3.custom.js"></script>
 </head>
 
-<body>
+<body class="home loggedOut">
+	<header>
+		<div class="wrap">
+			<a href="#"><h1 class="logo">VictoryRoom</h1></a>
+			<nav>
+				<ul>
+					<li class="active"><a href="#">Sports</a></li>
+					<li><a href="#">Live</a></li>
+					<li><a href="#">Casino</a></li>
+					<li><a href="#">Live Casino</a></li>
+					<li><a href="#">Promotions</a></li>
+					<li><a href="#">VIP</a></li>
+				</ul>
+			</nav>
+			<div class="acc">
+			<!-- Language -->
+				<!-- 
+				<div class="lang">
+					<a href="#">EN</a>
+					<a href="#">RU</a>
+				</div>
+				-->
+			<!-- / Language -->
+				<a href="#" class="helpCenter">Help Center</a>
+				<a href="#" class="liveChat">Live Chat</a>
+				<a href="#" class="btn borderBR6 register registerC">Register</a>
+				<a href="#" class="btn borderBR6 noBg login loginC">Login</a>
+			</div>
+		</div>
+	</header>
 
 <div class="wrapper">
-	<header>
-		<h1 class="logo">VictoryRoom</h1>
-	</header>
 </div><!-- wrapper -->
 
-<!-- jQuery -->
+<!-- Grab Google CDN's jQuery. fall back to local if necessary -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<!--  <script>window.jQuery || document.write("<script src='_/js/libs/jquery-2.1.4.min.js'>\x3C/script>")</script> -->
 
 <!-- JS Plugins -->
 <script src="_/js/libs/prefixfree.min.js"></script>
