--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 	<link rel="shortcut icon" href="_/img/favicon.ico" />
 	<!-- CSS and Fonts-->
 	<link rel="stylesheet" href="_/css/style.css" />
+	<!-- <link rel="stylesheet" href="_/css/slideme.css" /> -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500' rel='stylesheet' type='text/css' data-noprefix>
+	<link href='https://fonts.googleapis.com/css?family=Raleway:400,500,600,700' rel='stylesheet' type='text/css' data-noprefix>
 	<!-- All JavaScript at the bottom, except this Modernizr build & CSS Browser Selector User Agent. -->
 	<script src="_/js/libs/css_browser_selector.min.js"></script>
-	<script src="_/js/libs/modernizr-2.8.3.custom.js"></script>
+	<script src="_/js/libs/modernizr-2.8.3.dev.js"></script>
 </head>
 
-<body class="home loggedOut">
+<body class="landingPage loggedOut">
 	<header>
 		<div class="wrap">
 			<a href="#"><h1 class="logo">VictoryRoom</h1></a>
@@ -51,8 +53,101 @@
 		</div>
 	</header>
 
+	<div class="slideWrap">
+
+		<div id="slides">
+		  	<!-- <div class="slides-container"> -->
+			   	<div class="list">
+					<img src="_/img/temp/landing.jpg" alt=""/>		
+					<div class="details">
+						<h2>200$ welcome<br/> bonus plus 100<br/> free spins</h2>
+						<a href="#" class="btn">JOIN US</a>
+						<p class="login">Already a member? <a href="#">Login</a></p>
+					</div>
+			   	</div>
+			   	<div class="list">
+					<img src="_/img/temp/landing2.jpg" alt="" />		
+					<div class="details">
+						<h2>Bet 5$ and get<br/>30$ free bet</h2>
+						<a href="#" class="btn">JOIN US</a>
+						<p class="login">Already a member? <a href="#">Login</a></p>
+					</div>
+			   	</div>
+		  	<!-- </div> -->
+		</div>	
+	</div>
+
 <div class="wrapper">
 </div><!-- wrapper -->
+
+<footer>
+	<div class="container">
+	<!-- Nav Links -->
+		<ul class="links">
+			<li>
+				<p class="title">Sports</p>
+				<p><a href="#">Pre-Match</a></p>
+				<p><a href="#">Live</a></p>
+				<p><a href="#">Virtual</a></p>
+				<p><a href="#">Statistics</a></p>
+				<p><a href="#">Live Center</a></p>
+				<p><a href="#">Promotions</a></p>
+				<p><a href="#">News</a></p>
+				<p><a href="#">FAQ</a></p>
+			</li>
+			<li>
+				<p class="title">Casino</p>
+				<p><a href="#">Games</a></p>
+				<p><a href="#">Promotions</a></p>
+				<p><a href="#">Mobile</a></p>
+				<p><a href="#">News</a></p>
+				<p><a href="#">FAQ</a></p>
+			</li>
+			<li>
+				<p class="title">Live Casino</p>
+				<p><a href="#">Games</a></p>
+				<p><a href="#">Mobile</a></p>
+				<p><a href="#">Promotions</a></p>
+				<p><a href="#">News</a></p>
+				<p><a href="#">FAQ</a></p>
+			</li>
+			<li>
+				<p class="title">Promotion</p>
+				<p><a href="#">All</a></p>
+				<p><a href="#">Sports</a></p>
+				<p><a href="#">Casino</a></p>
+				<p><a href="#">Live Casino</a></p>
+				<p><a href="#">VIP System</a></p>
+				<p><a href="#">News</a></p>
+				<p><a href="#">FAQ</a></p>
+			</li>
+			<li>
+				<p class="title">About us</p>
+				<p><a href="#">Help Centre</a></p>
+				<p><a href="#">Responsible Gaming</a></p>
+				<p><a href="#">Terms &amp; Conditions</a></p>
+				<p><a href="#">Privacy Policy</a></p>
+				<p><a href="#">Cookie Policy</a></p>
+				<p><a href="#">Affiliates</a></p>
+			</li>
+		</ul>
+	<!-- / Nav Links -->
+
+<!-- 		<div class="payMethods">
+			<p class="title">Payments Methods</p>
+			<ol>
+				<li><img src="_/temp/visa.png"></li>
+				<li><img src="_/temp/mastercard.png"></li>
+				<li><img src="_/temp/skrill.png"></li>
+				<li><img src="_/temp/neteller.png"></li>
+				<li><img src="_/temp/qiwi.png"></li>
+				<li><img src="_/temp/webmoney.png"></li>
+				<li><img src="_/temp/ecopays.png"></li>
+				<li><img src="_/temp/v.png"></li>
+			</ol>
+		</div> -->
+	</div>
+</footer>
 
 <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -60,6 +155,8 @@
 
 <!-- JS Plugins -->
 <script src="_/js/libs/prefixfree.min.js"></script>
+<script src="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script>
+<!-- <script src="_/js/jquery.slideme2.js"></script> -->
 
 <!-- Custom Funtions -->
 <script src="_/js/functions.js"></script>
