--- a/index.html
+++ b/index.html
@@ -133,21 +133,36 @@
 			</ul>
 			<!-- / Nav Links -->
 
-<!-- 		<div class="payMethods">
-			<p class="title">Payments Methods</p>
-			<ol>
-				<li><img src="_/temp/visa.png"></li>
-				<li><img src="_/temp/mastercard.png"></li>
-				<li><img src="_/temp/skrill.png"></li>
-				<li><img src="_/temp/neteller.png"></li>
-				<li><img src="_/temp/qiwi.png"></li>
-				<li><img src="_/temp/webmoney.png"></li>
-				<li><img src="_/temp/ecopays.png"></li>
-				<li><img src="_/temp/v.png"></li>
-			</ol>
-		</div> -->
-	</div>
-</footer>
+			<!-- Payment Methods -->
+			<div class="payMethods">
+				<p class="title">Payments Methods</p>
+				<i class="divider"></i>
+				<ol>
+					<li><i class="visa"></i></li>
+					<li><i class="masterCard"></i></li>
+					<li><i class="skrill"></i></li>
+					<li><i class="neteller"></i></li>
+					<li><i class="qiwi"></i></li>
+					<li><i class="webMoney"></i></li>
+					<li><i class="ecoPays"></i></li>
+					<li><i class="beeline"></i></li>
+				</ol>
+			</div>
+			<!-- / Payment Methods -->
+
+			<!-- Partners -->
+			<div class="partners">
+				<p class="title">Partners</p>
+				<i class="divider"></i>
+				<ol>
+					<li><img src="_/img/partners/netent.png"></li>
+					<li><img src="_/img/partners/betsoft.png"></li>
+				</ol>
+			</div>
+			<!-- / Partners -->
+
+		</div>
+	</footer>
 
 <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
