--- a/index.html
+++ b/index.html
@@ -161,6 +161,21 @@
 			</div>
 			<!-- / Partners -->
 
+			<div class="secRow">
+				<i class="divider"></i>
+				<div class="left">
+					<small><span>© 2015, VictoryRoom. All rights reserved.</span>
+					VictoryRoom is operated by James Bond registered in the Commercial register of Curacao no. 126922 and has a sublicense CIL pursuant to Master gaming License №5536/JAZ. Powered by BetConstruct </small>
+					<i class="ratedR">+18</i>
+				</div>
+				<i class="divider"></i>
+			</div>
+
+			<div class="license">
+				<p class="title">LICENSING</p>
+				<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+			</div>
+
 		</div>
 	</footer>
 
