--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 				<!-- / Language -->
 				<a href="#" class="helpCenter">Help Center</a>
 				<a href="#" class="liveChat">Live Chat</a>
-				<a href="#" class="btn borderBR6 register registerC">Register</a>
-				<a href="#" class="btn borderBR6 noBg login loginC">Login</a>
+				<a href="quick-registration-lightbox.html" class="btn borderBR6 register registerC lightbox">Register</a>
+				<a href="#" class="btn borderBR6 noBg login loginC lightbox">Login</a>
 			</div>
 		</div>
 	</header>
@@ -187,76 +187,14 @@
 		</div>
 	</footer>
 
-
-
-
-
-
-<style type="text/css">
-	.tooltip{position: absolute;opacity: 0;padding: 10px;background:#FFF;}
-	.tooltip.active{opacity:1;}
-
-	.tooltipContent{display: none;}
-</style>
-
-
-
-<div class="tooltip"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="tooltipContent">
-	<p class="login-error-password">your password is wrong</p>
-	<p class="login">your password is wrong</p>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <!--  <script>window.jQuery || document.write("<script src='_/js/libs/jquery-2.1.4.min.js'>\x3C/script>")</script> -->
 
 <!-- JS Plugins -->
 <script src="_/js/libs/prefixfree.min.js"></script>
-<script src="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script>
+<script src="_/js/plugins/slick.min.js"></script>
+<script src="_/js/plugins/jquery.magnific-popup.min.js"></script>
 <!-- <script src="_/js/jquery.slideme2.js"></script> -->
 
 <!-- Custom Funtions -->
