--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 	<div class="slideWrap">
 
-		<div id="slides">
+		<div class="slides">
 			<!-- <div class="slides-container"> -->
 			<div class="list">
 				<img src="_/img/temp/landing.jpg" alt=""/>	
@@ -138,16 +138,17 @@
 			<div class="payMethods">
 				<p class="title">Payments Methods</p>
 				<i class="divider"></i>
-				<ol>
-					<li><i class="visa"></i></li>
-					<li><i class="masterCard"></i></li>
-					<li><i class="skrill"></i></li>
-					<li><i class="neteller"></i></li>
-					<li><i class="qiwi"></i></li>
-					<li><i class="webMoney"></i></li>
-					<li><i class="ecoPays"></i></li>
-					<li><i class="paySafeCard"></i></li>
-				</ol>
+				<ul class="slider">
+					<li><a href="#"><i class="visa"></i></a></li>
+					<li><a href="#"><i class="masterCard"></i></a></li>
+					<li><a href="#"><i class="skrill"></i></a></li>
+					<li><a href="#"><i class="neteller"></i></a></li>
+					<li><a href="#"><i class="qiwi"></i></a></li>
+					<li><a href="#"><i class="webMoney"></i></a></li>
+					<li><a href="#"><i class="ecoPays"></i></a></li>
+					<li><a href="#"><i class="paySafeCard"></i></a></li>
+				</ul>
+				<i class="arrow next-button-slick"></i>
 			</div>
 			<!-- / Payment Methods -->
 
@@ -155,13 +156,14 @@
 			<div class="partners">
 				<p class="title">Partners</p>
 				<i class="divider"></i>
-				<ol>
-					<li><img src="_/img/partners/netent.png"></li>
-					<li><img src="_/img/partners/betsoft.png"></li>
-				</ol>
+				<ul>
+					<li><a href="#"><i class="netEnt"></i></a></li>
+					<li><a href="#"><i class="microgaming"></i></a></li>
+				</ul>
 			</div>
 			<!-- / Partners -->
 
+			<!-- Rights -->
 			<div class="secRow">
 				<i class="divider"></i>
 				<div class="left">
@@ -169,22 +171,28 @@
 					VictoryRoom is operated by James Bond registered in the Commercial register of Curacao no. 126922 and has a sublicense CIL pursuant to Master gaming License №5536/JAZ. Powered by <em>BETCONSTRUCT</em> </small>
 					<i class="ratedR">+18</i>
 				</div>
+				<!-- Social -->
 				<div class="social">
-					<a href="#" class="socicon-twitter socicon"></a>
 					<a href="#" class="socicon-facebook socicon"></a>
+					<a href="#" class="socicon-twitter socicon"></a>
 					<a href="#" class="socicon-google socicon"></a>
 					<a href="#" class="socicon-youtube socicon"></a>
 					<a href="#" class="socicon-linkedin socicon"></a>
 				</div>
+				<!-- / Social -->
 				<i class="divider"></i>
 			</div>
+			<!-- / Rights -->
 
+			<!-- License -->
 			<div class="license">
 				<p class="title">LICENSING</p>
 				<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
 			</div>
-
+			<!-- / License -->
 		</div>
+
+		<i class="goToTop"></i>
 	</footer>
 
 <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
@@ -194,7 +202,10 @@
 <!-- JS Plugins -->
 <script src="_/js/libs/prefixfree.min.js"></script>
 <script src="_/js/plugins/slick.min.js"></script>
+<!-- <script src="_/js/plugins/jquery.slides.min.js"></script> -->
 <script src="_/js/plugins/jquery.magnific-popup.min.js"></script>
+
+
 <!-- <script src="_/js/jquery.slideme2.js"></script> -->
 
 <!-- Custom Funtions -->
