--- a/quick-registration-lightbox.html
+++ b/quick-registration-lightbox.html
@@ -1,6 +1,111 @@
 <div class="lightboxContent">
 	<div class="header">
-		
+		<a href="#" class="logo"></a>		
 	</div>
+	<div class="body clearfix">
+		<div class="banner">
+			<img src="../_/img/temp/bonus ad_quick.png" alt="banner for quick registration">
+		</div>
+		<form class="registration">
+			<h3>Registration</h3>
+			<div class="row">
+				<input type="text" name="username" placeholder="Choose your username" required>
+			</div>
+			<div class="row">
+				<input type="email" name="email" placeholder="Your e-mail address" required>
+			</div>
+			<div class="row">
+				<input type="password" name="pass" placeholder="Choose your password"  required>
+			</div>
+			<div class="row">
+				<input type="password" name="conf" placeholder="Confirm the password" required>
+			</div>
+			<div class="row">
+				<input type="text" name="fName" placeholder="First name" required>
+			</div>
+			<div class="row">
+				<input type="text" name="lName" placeholder="Last name" required>
+			</div>
+			<div class="row">
+				<div class="half left">
+					<input type="radio" name="gender" value="man" id="man" checked>
+					<label for="man" class="radio half">Man</label>
+					<input type="radio" name="gender" value="woman" id="woman">
+					<label for="woman" class="radio half">Woman</label>
+				</div>
+				<div class="half right">
+					<select name="birthDay" id="birthDay" required>
+						<option>DD</option>
+						<option>01</option>
+						<option></option>
+					</select>			
+					<select data-tooltip="When is your birthday? (MM)." required>
+						<option>MM</option>
+						<option>01</option>
+						<option></option>
+					</select>
+					<select name="birthYear" required>
+						<option>YYYY</option>
+						<option>1997</option>
+					</select>
+				</div>
+			</div>
+			<div class="row">
+				<div class="half left bonus">
+					<input type="text" name="promo" placeholder="Promo code (optional)">
+				</div>
+				<div class="half right bonus">
+					<input type="text" name="refer" placeholder="Referral code (optional)">
+				</div>
+			</div>
+			<div class="row checkboxes">				
+				<input type="checkbox" name="terms" id="terms">
+				<label for="terms" class="checkbox"> 
+					<span>I am 18 years or older, I have read and accept <a href="#">Terms and Conditions</a> of VictoryRoom.  I also understand and accept Cookie Policy and Privacy Policy.</span>
+				</label>
+			
+				<input type="checkbox" name="subscribe" checked id="subscribe">
+				<label for="subscribe" class="checkbox">
+					<span>I want to receive promotions and news. I can cancel this service in my account anytime.</span>
+				</label>
+			</div>
+			<div class="row buttons">
+				<a href="#" class="btn registerC">Create an account</a>
+				<a href="#" class="btn loginC right">Login</a>
+				<span class="left">Already have an account?</span>
+			</div>
 
+			<div class="notice">
+				<p class="username tooltip">
+					Hello! Enter your public username that will be displayed on our website. It should consist of minimum X and maximum Y English letters and numbers.
+				</p>
+				<p class="email tooltip">
+					Let's continue. Enter your valid e-mail address. It will be used to activate your account. If you wish you can opt-out from receiving our marvelous offers as soon as you logged in.
+				</p>
+				<p class="pass tooltip">
+					We want to protect you. Enter your super strong password. It should contain minimum X and maximum Y characters. We recommend you not to use your  name, surname, username or date of birth in your password.
+				</p>
+				<p class="conf tooltip">
+					Please repeat your password
+				</p>
+				<p class="fName tooltip">
+					Hey! What is your first name?  It should match with the first name that is written in your official personal documentation e.g. Passport and consist of minimum X and maximum Y characters. It can contain only English letters and some characters (list of characters).
+				</p>
+				<p class="lName tooltip">
+					And what is you last name? It should match with the last name that is written in your official personal documentation e.g. Passport and consist of minimum X and maximum Y characters. It can contain only English letters and some characters (list of characters).
+				</p>
+				<p class="birthDay tooltip">
+					When is your birthday? (DD).
+				</p>		
+				<p class="birthMonth tooltip">
+					When is your birthday? (MM).
+				</p>		
+				<p class="birthYear tooltip">
+					When is your birthday? (YYYY).
+				</p>
+			</div>
+
+		</form>
+
+	</div>
 </div>
